Bug 106735 - Shift+Click on URL in email causes crash
Summary: Shift+Click on URL in email causes crash
Status: RESOLVED FIXED
Alias: None
Product: kmail
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Gentoo Packages Linux
: NOR crash
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
: 107191 (view as bug list)
Depends on:
Blocks:
 
Reported: 2005-06-03 15:53 UTC by Paul Eggleton
Modified: 2007-09-14 12:17 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Paul Eggleton 2005-06-03 15:53:10 UTC
Version:            (using KDE KDE 3.4.1)
Installed from:    Gentoo Packages
Compiler:          gcc version 3.3.5-20050130 Gentoo 3.3.5.20050130-r1, ssp-3.3.5.20050130-1, pie-8.7.7.1
OS:                Linux

Purely by accident I held down shift when clicking on an email address in KMail's preview pane, and KMail crashed. After some testing I discovered that it crashes every time you shift+click on any URL anywhere in KMail (preview pane, message window, etc.)

Here is a backtrace:

---------------------- snip ----------------------
Using host libthread_db library "/lib/libthread_db.so.1".
`system-supplied DSO at 0xffffe000' has disappeared; keeping its symbols.
[Thread debugging using libthread_db enabled]
[New Thread 16384 (LWP 12452)]
[KCrash handler]
#5  partNode::msgPart (this=0x0) at partNode.h:97
#6  0xb7e73d7c in KMHandleAttachmentCommand::slotStart (this=0x8896d80)
    at kmcommands.cpp:2633
#7  0xb7e65c5f in KMHandleAttachmentCommand::qt_invoke (this=0x8896d80, _id=9, 
    _o=0x0) at kmcommands.moc:3563
#8  0xb5dabfe0 in QObject::activate_signal (this=0x83e0508, clist=0x83fe330, 
    o=0xbfffeb90) at qobject.cpp:2355
#9  0xb618fb23 in QSignal::signal (this=0x83e0508, t0=@0x83e0530)
    at moc_qsignal.cpp:100
#10 0xb5dcde9f in QSignal::activate (this=0x83e0508) at qsignal.cpp:212
#11 0xb5dd7dac in QSingleShotTimer::event (this=0x83e04e0) at qtimer.cpp:286
#12 0xb5d3bbf5 in QApplication::internalNotify (this=0xbffff220, 
    receiver=0x83e04e0, e=0xbfffeec0) at qapplication.cpp:2635
#13 0xb5d3ae38 in QApplication::notify (this=0xbffff220, receiver=0x83e04e0, 
    e=0xbfffeec0) at qapplication.cpp:2358
#14 0xb65a64b7 in KApplication::notify (this=0xbffff220, receiver=0x83e04e0, 
    event=0xbfffeec0) at kapplication.cpp:549
#15 0xb7825596 in QApplication::sendEvent (receiver=0x0, event=0x0)
    at qapplication.h:491
#16 0xb5d2711f in QEventLoop::activateTimers (this=0x81569f8)
    at qeventloop_unix.cpp:556
#17 0xb5cd771d in QEventLoop::processEvents (this=0x81569f8, flags=4)
    at qeventloop_x11.cpp:389
#18 0xb5d5310d in QEventLoop::enterLoop (this=0x81569f8) at qeventloop.cpp:198
#19 0xb5d53026 in QEventLoop::exec (this=0x81569f8) at qeventloop.cpp:145
#20 0xb5d3bd97 in QApplication::exec (this=0xbffff220) at qapplication.cpp:2758
#21 0x0804aa95 in main (argc=0, argv=0x0) at main.cpp:95
---------------------- snip ----------------------

As an aside, I was composing a new email the first time KMail crashed. When I re-launched it I was surprised and impressed to see it bring up the email I had been composing completely intact. Brilliant! :)
Comment 1 Paul Eggleton 2005-06-03 15:57:09 UTC
Oops, by URL, I mean clickable link. Also, I'm using qt-3.3.4-r3, if it's of any consequence.
Comment 2 Giovanni Venturi 2005-06-03 16:10:29 UTC
I confirm the bug.
Comment 3 Giovanni Venturi 2005-06-03 16:16:29 UTC
I compiled from source using SVN brach 3.4.
Comment 4 Till Adam 2005-06-04 21:11:44 UTC
SVN commit 422206 by tilladam:

Don't crash when shift-clicking non-attachment urls, but pass it on to
default khtml shift-click handling.

BUG: 106735


 M  +1 -0      kmreaderwin.cpp  


--- trunk/KDE/kdepim/kmail/kmreaderwin.cpp #422205:422206
@@ -2468,6 +2468,7 @@
     if ( me->button() == LeftButton && ( me->state() & ShiftButton ) ) {
       // special processing for shift+click
       mAtmCurrent = msgPartFromUrl( mUrlClicked );
+      if ( mAtmCurrent < 0 ) return false; // not an attachment
       mAtmCurrentName = mUrlClicked.path();
       slotHandleAttachment( KMHandleAttachmentCommand::Save ); // save
       return true; // eat event
Comment 5 Till Adam 2005-06-10 22:44:43 UTC
*** Bug 107191 has been marked as a duplicate of this bug. ***
Comment 6 jeff pitman 2005-06-25 11:10:34 UTC
This doesn't have to be a URL.  Shift-clicking anywhere in the message viewer can cause the crash.
Comment 7 Jens 2005-07-25 09:21:20 UTC
Yes, I can confirm this. Same backtrace too.
It also crashes when trying to save attachments to disk via Shift-click.

Jens
Comment 8 Jens 2005-07-25 09:24:09 UTC
Oops, sorry - that was wrong. I must learn to correctly point the mouse to the actual attachment. 8-)