Don't crash when shift-clicking non-attachment urls, but pass it on to default khtml shift-click handling.

BUG: 106735

svn path=/trunk/KDE/kdepim/; revision=422206